<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".SignupActivity" android:background="#FFFFFF">

    <TextView
        android:id="@+id/yummiit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dm_serif_text"
        android:text="Eye Conic"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="60sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/loginNowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="79dp"
        android:background="@android:color/transparent"
        android:backgroundTint="#FEFEFE"
        android:elevation="0dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/login_now"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryLight"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/registerButton"
        app:layout_constraintHorizontal_bias="0.21"
        app:layout_constraintStart_toEndOf="@+id/textAlready"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />


    <TextView
        android:id="@+id/textAlready"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/already_have_an_account"
        android:textSize="20sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="@+id/registerButton"
        app:layout_constraintTop_toBottomOf="@+id/registerButton" />

    <EditText
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/username"
            android:hint="@string/username"
            android:background="@drawable/greybutton" android:paddingStart="20dp" android:paddingEnd="0dp"
            android:textColor="#000000" android:autofillHints="example@email.com" android:textColorHint="#546E7A"
            app:layout_constraintTop_toBottomOf="@+id/signupHeading" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"/>
    <EditText
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/email"
            android:background="@drawable/greybutton" android:paddingStart="20dp" android:paddingEnd="0dp"
            android:textColor="#000000" android:autofillHints="example@email.com" android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/username"
            android:layout_marginTop="16dp" android:hint="@string/email"/>
    <EditText
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/password"
            android:background="@drawable/greybutton" android:paddingStart="20dp" android:paddingEnd="0dp"
            android:textColor="#000000" android:autofillHints="123" android:textColorHint="#546E7A"
            android:layout_marginTop="16dp"/>
    <EditText
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/confirmPassword"
            android:hint="@string/confirm_password"
            android:background="@drawable/greybutton" android:paddingStart="20dp" android:paddingEnd="0dp"
            android:textColor="#000000" android:autofillHints="example@email.com" android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password" android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/signupHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/merriweather_bold"
        android:paddingStart="40dp"
        android:paddingEnd="30dp"
        android:text="@string/hello_register_to_get_started"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/yummiit" />

    <Button
            android:layout_width="360dp"
            android:layout_height="57dp" android:id="@+id/registerButton"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/confirmPassword" app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp" android:text="@string/register"/>

</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>