<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        tools:context=".LoginActivity">

        <TextView
            android:id="@+id/yummiit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/dm_serif_text"
            android:text="Eye Conic"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="60sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.052" />

        <TextView
            android:id="@+id/loginHeading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:fontFamily="@font/merriweather_bold"
            android:paddingStart="40dp"
            android:paddingEnd="30dp"
            android:text="@string/welcome_back_glad_to_see_you_again"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/yummiit" />

        <EditText
            android:id="@+id/email"
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:layout_marginTop="24dp"
            android:autofillHints="example@email.com"
            android:background="@drawable/greybutton"
            android:ems="30"
            android:hint="@string/enter_your_email"
            android:inputType="textEmailAddress"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:textColor="#000000"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="@+id/loginHeading"
            app:layout_constraintStart_toStartOf="@+id/loginHeading"
            app:layout_constraintTop_toBottomOf="@+id/loginHeading" />

        <EditText
            android:id="@+id/password"
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:layout_marginTop="16dp"
            android:autofillHints="123"
            android:background="@drawable/greybutton"
            android:ems="10"
            android:hint="@string/enter_your_password"
            android:inputType="textPassword"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:textColor="#000000"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="@+id/email"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:layout_marginTop="32dp"
            android:text="@string/login"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />

        <Button
            android:id="@+id/continueWithGoogleButton"
            android:layout_width="360dp"
            android:layout_height="57dp"
            android:layout_marginTop="100dp"
            app:icon="@drawable/ic_google_logo"
            android:drawablePadding="5dp"
            android:gravity="center|center_horizontal|fill_horizontal|center_vertical"
            android:paddingStart="70dp"
            android:paddingEnd="0dp"
            android:text="@string/continue_with_google"
            android:textAllCaps="false"
            android:textSize="20sp"
            style="@style/Theme.Yummiit.GoogleLoginButton"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/textLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:gravity="clip_horizontal|center"
            android:text="@string/or_login_with"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/loginButton"
            app:layout_constraintStart_toStartOf="@+id/loginButton"
            app:layout_constraintTop_toBottomOf="@+id/loginButton" />

        <TextView
            android:id="@+id/textAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="43dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/don_t_have_an_account"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.06"
            app:layout_constraintStart_toStartOf="@+id/continueWithGoogleButton"
            app:layout_constraintTop_toBottomOf="@+id/continueWithGoogleButton" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/registerNowButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@android:color/transparent"
            android:backgroundTint="#FEFEFE"
            android:elevation="0dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/register_now"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimaryLight"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintEnd_toEndOf="@+id/continueWithGoogleButton"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toEndOf="@+id/textAccount"
            app:layout_constraintTop_toBottomOf="@+id/continueWithGoogleButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>